# DeepLearningZero

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: activation_func.cpp  activation_func.hpp  affine.cpp  affine.hpp  load_mnist.cpp  load_mnist.hpp  loss_functions.cpp  loss_functions.hpp  network_3.cpp  network_3.hpp  numerical.cpp  numerical.hpp  relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp  simple_net.cpp  simple_net.hpp  softmax_with_loss.cpp  softmax_with_loss.hpp  two_layer_net.cpp  two_layer_net.hpp
tools/: plot.py
